--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+## properties
+application-db.yml
+application-jwt.yml
+
 ### STS ###
 .apt_generated
 .classpath
