--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=securityExample
-spring.config.import=classpath:application-db.yml
+spring.config.import=classpath:application-db.yml, application-jwt.yml
